--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+# lukasdergent.github.io
 <!DOCTYPE html>
 <html>
-<body>
-
-<h2>Lukas Dergent</h2>
-<p><a href="https://www.w3schools.com/html/">Visit our HTML tutorial</a></p>
-
-</body>
+    <head>
+    <title>Lukas Dergent</title> 
+        <style>
+        </style>
+    </head>
+    <body>
+        Lukas Dergent <br>
+        <strong><a href="knoppen.html">knoppenpagina</a></strong><br>
+        <a href="afbeelding.html">afbeelding</a><br>
+        
+    </body>
 </html>
