--- a/afbeelding.html
+++ b/afbeelding.html
@@ -5,7 +5,10 @@
         <title>Lukas Dergent</title>
     </head>
     <body>
-        <img src="afbeelding.jpg" width="1000">
+        <img src="afbeelding1.jpg" width="500">
+        <img src="afbeelding2.jpg" width="500"><br>
+        <img src="afbeelding3.png" width="450">
         <a href="index.html">terug naar hoofdpagina</a>
-    </body>
+        
+        </body>
 </html>
